Add distribution management

--- a/pom.xml
+++ b/pom.xml
@@ -1530,4 +1530,17 @@
     </profile>
   </profiles>
 
+  <distributionManagement>
+    <repository>
+      <id>Hops</id>
+      <name>Hops Repo</name>
+      <url>https://archiva.hops.works/repository/Hops/</url>
+    </repository>
+    <snapshotRepository>
+      <id>Hops</id>
+      <name>Hops Repo</name>
+      <url>https://archiva.hops.works/repository/Hops/</url>
+    </snapshotRepository>
+  </distributionManagement>
+
 </project>
