remove org.apache.hive.jdbc.HiveDriver dependecies

--- a/hudi-sync/hudi-hive-sync/pom.xml
+++ b/hudi-sync/hudi-hive-sync/pom.xml
@@ -231,6 +231,11 @@
       <artifactId>hadoop-mapreduce-client-core</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>io.hops.hive</groupId>
+      <artifactId>hops-jdbc</artifactId>
+      <scope>compile</scope>
+    </dependency>
 
   </dependencies>
 
