pom.xml modifications to use the standalone databricks-proof version of the hive-standalone-metastore jars.

--- a/hudi-client/hudi-java-client/pom.xml
+++ b/hudi-client/hudi-java-client/pom.xml
@@ -75,7 +75,7 @@
         </dependency>
         <dependency>
             <groupId>${hive.groupid}</groupId>
-            <artifactId>hive-metastore</artifactId>
+            <artifactId>hops-hive-standalone-metastore</artifactId>
             <version>${hive.version}</version>
             <scope>test</scope>
         </dependency>
