--- a/packaging/hudi-flink-bundle/pom.xml
+++ b/packaging/hudi-flink-bundle/pom.xml
@@ -130,7 +130,7 @@
 
                   <include>io.hops.hive:hive-common</include>
                   <include>io.hops.hive:hive-exec</include>
-                  <include>io.hops.hive:hive-metastore</include>
+                  <include>io.hops.hive:hops-hive-standalone-metastore</include>
                   <include>io.hops.hive:hops-jdbc</include>
 
                   <include>org.apache.hbase:hbase-client</include>
@@ -332,7 +332,7 @@
     </dependency>
     <dependency>
       <groupId>${hive.groupid}</groupId>
-      <artifactId>hive-metastore</artifactId>
+      <artifactId>hops-hive-standalone-metastore</artifactId>
       <version>${hive.version}</version>
       <exclusions>
         <exclusion>
